--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
 
 </header>
     <nav>
-        
+        <a href = "#">Home</a>
+        <a href = "#">Team</a>
+        <a href = "#">Sign In</a>
     </nav>
+</header>
+
+<section class = "top-section">
+    <div class= "top-banner">
+        <img src =" " alt="This is a Spanish flag.">
+        <div class="top-text">
+            <h2>No more torture in Spanish learning!</h2>
+            <p>Start using the Conjugator today.</p>
+            <button>Try it Now</button>
+        </div>
+    </div>
+</section>
+
 </body>
+
+
