HTML skeleton completed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
 <header>
 
 </header>
@@ -28,16 +29,57 @@
     </nav>
 </header>
 
-<section class = "top-section">
+<section class = "top-section"> 
     <div class= "top-banner">
         <img src =" " alt="This is a Spanish flag.">
         <div class="top-text">
-            <h2>No more torture in Spanish learning!</h2>
+            <h1>Conjugator - Your Spanish Learning Buddy</h1>
+            <p>No more torture in Spanish learning</p>
             <p>Start using the Conjugator today.</p>
             <button>Try it Now</button>
         </div>
     </div>
 </section>
+
+<section class="middle-section">
+    <div class="middle-content">
+        <h2>Why Conjugator?</h2>
+        <div class = "middle-content-reason">
+            <div class = "reason-box">
+                <img src="">
+                <h3>Interactive Platform</h3>
+                <p></p>
+            </div>
+            <div class = "reason-box">
+                    <img src="">
+                    <h3>Comprehensive Content</h3>
+                    <p>Conjugators covers all kinds of Spanish tenses such as Present, Preterite, Imperfect and Subjunctive. You can select specific tense</p>
+            </div>
+            <div class = "reason-box">
+                    <img src="">
+                    <h3>Measurable Results</h3>
+                    <p>Conjugator tracks your score on your practice. You can easily track your progress on your online portal.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bottom-section">
+    <div class="bottom-banner">
+        <h2>Where else can you find such a good tool for Spanish Conjugation?</h2>
+        <button>Try it NOW</button>
+    </div>
+</section>
+
+<footer>
+    <div class="footer-content">
+         <nav>
+            <a href = "#">Home</a>
+            <a href = "#">Team</a>
+            <a href = "#">Sign In</a>
+         </nav>
+    </div>
+</footer>
 
 </body>
 
