--- a/team.html
+++ b/team.html
@@ -17,3 +17,49 @@
   <![endif]-->
 </head>
 
+</header>
+<nav>
+    <a href = "#">Home</a>
+    <a href = "#">Team</a>
+    <a href = "#">Sign In</a>
+</nav>
+</header>
+
+<section class = "top-section"> 
+        <div class= "top-banner">
+            <img src =" " alt="Teamwork Picture">
+        </div>
+</section>
+
+<section class = "middle-content">
+    <div class="team-member-info">
+    <h1>Our Team</h1>
+        <div class="team-row-one">
+            <div class ="person">
+                <img src="" alt="Picture of">
+                <h2>Lily Zhou - Front End </h2>
+                <a href="#" class="fa fa-github"></a>
+            </div>
+
+            <div class ="person">
+                    <img src="" alt="Picture of">
+                    <h2>Chris Delfaus - Front End </h2>
+                    <a href="#" class="fa fa-github"></a>
+            </div>
+        </div>
+
+        <div class="team-row-two">
+            <div class ="person">
+                <img src="" alt="Picture of">
+                <h2>Karen Li - UX</h2>
+                <a href="#" class="fa fa-github"></a>
+            </div>
+
+            <div class ="person">
+                    <img src="" alt="Picture of">
+                    <h2>George Kando - Back End</h2>
+                    <a href="#" class="fa fa-github"></a>
+            </div>
+        </div>
+</div>
+</section>
