pictures added to  index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
 
+<div class = "container">
 <header>
 
 </header>
@@ -31,7 +32,7 @@
 
 <section class = "top-section"> 
     <div class= "top-banner">
-        <img src =" " alt="This is a Spanish flag.">
+        <img src ="image/top-banner.jpg" alt="This is a student struggling in front of the computer.">
         <div class="top-text">
             <h1>Conjugator - Your Spanish Learning Buddy</h1>
             <p>No more torture in Spanish learning</p>
@@ -46,17 +47,17 @@
         <h2>Why Conjugator?</h2>
         <div class = "middle-content-reason">
             <div class = "reason-box">
-                <img src="">
+                <img src="image/reason-box-one.jpg">
                 <h3>Interactive Platform</h3>
                 <p></p>
             </div>
             <div class = "reason-box">
-                    <img src="">
+                    <img src="image/reason-box-two.jpg">
                     <h3>Comprehensive Content</h3>
                     <p>Conjugators covers all kinds of Spanish tenses such as Present, Preterite, Imperfect and Subjunctive. You can select specific tense</p>
             </div>
             <div class = "reason-box">
-                    <img src="">
+                    <img src="image/reason-box-three.jpg">
                     <h3>Measurable Results</h3>
                     <p>Conjugator tracks your score on your practice. You can easily track your progress on your online portal.</p>
             </div>
@@ -81,6 +82,7 @@
     </div>
 </footer>
 
+</div>
 </body>
 
 
