--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 
 <body>
 
-<div class = "container">
 <header>
-
-</header>
     <nav>
         <a href = "#">Home</a>
         <a href = "#">Team</a>
         <a href = "#">Sign In</a>
     </nav>
 </header>
+
+<div class = "index-page-container">
 
 <section class = "top-section"> 
     <div class= "top-banner">
