--- a/team.html
+++ b/team.html
@@ -15,9 +15,10 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
 </head>
 
-</header>
+<header>
 <nav>
     <a href = "#">Home</a>
     <a href = "#">Team</a>
@@ -25,9 +26,10 @@
 </nav>
 </header>
 
+<div class = "team-page-container">
 <section class = "top-section"> 
         <div class= "top-banner">
-            <img src =" " alt="Teamwork Picture">
+            <img src ="image/the-team.jpg" alt="Teamwork Picture">
         </div>
 </section>
 
@@ -63,3 +65,5 @@
         </div>
 </div>
 </section>
+
+</div>
