added basic css

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
 <section class="bottom-section">
     <div class="bottom-banner">
-        <h2>Where else can you find such a good tool for Spanish Conjugation?</h2>
+        <h2>Where else can you find such a good tool for learning <br>Spanish Conjugation?</h2>
         <button>Try it NOW</button>
     </div>
 </section>
-
+</div>
 <footer>
     <div class="footer-content">
          <nav>
@@ -81,7 +81,7 @@
     </div>
 </footer>
 
-</div>
+
 </body>
 
 
