--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
                     <a href="#" class="fa fa-github"></a>
             </div>
         </div>
-
+    </div>
         <div class="team-row-two">
             <div class ="person">
                 <img src="" alt="Picture of">
@@ -64,6 +64,16 @@
             </div>
         </div>
 </div>
+
+    <footer>
+        <div class="footer-content">
+             <nav>
+                <a href = "#">Home</a>
+                <a href = "#">Team</a>
+                <a href = "#">Sign In</a>
+             </nav>
+        </div>
+    </footer>
+
 </section>
 
-</div>
