--- a/about.html
+++ b/about.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>Great Idea!</title>
+  <title>Conjugator - Team</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Russo+One&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -19,54 +21,67 @@
 </head>
 
 <header>
-<nav>
-    <a href = "#">Home</a>
-    <a href = "#">Team</a>
-    <a href = "#">Sign In</a>
-</nav>
-</header>
+        <h1>Conjugator</h1>
+        <nav>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About Us</a>
+            <a href = "#">Sign In</a>
+        </nav>
+    </header>
 
 <div class = "team-page-container">
 <section class = "top-section"> 
         <div class= "top-banner">
             <img src ="image/the-team.jpg" alt="Teamwork Picture">
+            <div class = "team-msg">
+            <p>"Great things in business are never done by one person. They're done by a team of people.</p>
+            <p>by Steve Jobs</p>
+            <br>
+            <p>Conjugator is brought to you by a team dedicated to your success in Spanish learning.</p>
+            <br>
+            <p>Meet our team below.</p>
+            </div>
         </div>
 </section>
 
 <section class = "middle-content">
-    <div class="team-member-info">
     <h1>Our Team</h1>
+     <div class="team-member-info">
         <div class="team-row-one">
             <div class ="person">
-                <img src="" alt="Picture of">
-                <h2>Lily Zhou - Front End </h2>
+                <img src="image/lily-picture.jpg" alt="Picture of">
+                <h2>Lily Zhou</h2>
+                <p>Front-End Developer</p>
                 <a href="#" class="fa fa-github"></a>
             </div>
 
             <div class ="person">
-                    <img src="" alt="Picture of">
-                    <h2>Chris Delfaus - Front End </h2>
+                    <img src="image/chris-picture.jpg" alt="Picture of">
+                    <h2>Chris Delfaus</h2>
+                    <p>Front-End Developer</p>
+                    <a href="#" class="fa fa-github"></a>
+            </div>
+        
+            <div class ="person">
+                <img src="image/karen-picture.jpg" alt="Picture of">
+                <h2>Karen Li</h2>
+                <p>UI Developer</p>
+                <a href="#" class="fa fa-github"></a>
+            </div>
+
+            <div class ="person">
+                    <img src="image/george-picture.jpg" alt="Picture of">
+                    <h2>George Kando</h2>
+                    <p>Back-End Developer</p>
                     <a href="#" class="fa fa-github"></a>
             </div>
         </div>
     </div>
-        <div class="team-row-two">
-            <div class ="person">
-                <img src="" alt="Picture of">
-                <h2>Karen Li - UX</h2>
-                <a href="#" class="fa fa-github"></a>
-            </div>
-
-            <div class ="person">
-                    <img src="" alt="Picture of">
-                    <h2>George Kando - Back End</h2>
-                    <a href="#" class="fa fa-github"></a>
-            </div>
-        </div>
 </div>
 
-    <footer>
+<footer>
         <div class="footer-content">
+            <h1>Conjugator</h1>
              <nav>
                 <a href = "#">Home</a>
                 <a href = "#">Team</a>
@@ -74,6 +89,7 @@
              </nav>
         </div>
     </footer>
+    
 
 </section>
 
