--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cabin|Russo+One&display=swap" rel="stylesheet">
-
+  <link href="/mywebsitefolder/fontawesome/fontawesome-all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
