About Page updated with new font and flex box

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </div>
 </section>
 
-<section class="middle-section">
+<section class="middle-section" id="why">
     <div class="middle-content">
-        <h2>Why Conjugator?</h2>
+        <a href ="#why"><h2>Why Conjugator?</h2></a>
         <div class = "middle-content-reason">
             <div class = "reason-box">
                 <img src="image/reason-box-one.jpg">
@@ -81,8 +81,8 @@
     <div class="footer-content">
         <h1>Conjugator</h1>
          <nav>
-            <a href = "#">Home</a>
-            <a href = "#">Team</a>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About Us</a>
             <a href = "#">Sign In</a>
          </nav>
     </div>
