--- a/about.html
+++ b/about.html
@@ -52,9 +52,7 @@
                 <h2>Lily Zhou</h2>
                 <p>Front-End Developer</p>
                 <div class="icons">
-                    <a href="#" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
-                    <a href="#" ><img class = "linkedin-icon" src="image/linkedin-icon.png"></a>
-                </div>
+                    <a href="https://github.com/lilyhoratio" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>                </div>
             </div>
 
             <div class ="person">
@@ -62,8 +60,7 @@
                     <h2>Chris Delfaus</h2>
                     <p>Front-End Developer</p>
                     <div class="icons">
-                        <a href="#" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
-                        <a href="#" ><img class = "linkedin-icon" src="image/linkedin-icon.png"></a>
+                        <a href="https://github.com/ChrisDelf" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
                     </div>
                 </div>
         
@@ -72,8 +69,7 @@
                 <h2>Karen Li</h2>
                 <p>UI Developer</p>
                 <div class="icons">
-                    <a href="#" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
-                    <a href="#" ><img class = "linkedin-icon" src="image/linkedin-icon.png"></a>
+                    <a href="https://github.com/karenjli" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
                 </div>
             </div>
 
@@ -82,9 +78,7 @@
                     <h2>George Kando</h2>
                     <p>Back-End Developer</p>
                     <div class="icons">
-                        <a href="#" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>
-                        <a href="#" ><img class = "linkedin-icon" src="image/linkedin-icon.png"></a>
-                    </div>
+                        <a href="https://github.com/gkando" ><img class = "github-icon" src="image/GitHub-Mark-32px.png"></a>                    </div>
                 </div>
         </div>
     </section>
