added link to sign-up feature

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
         <a href = "index.html">Home</a>
         <a href = "about.html">About Us</a>
-        <a href = "#">Sign In</a>
+        <a href = "https://conjugator-719.netlify.com/">Sign Up</a>
     </nav>
     
 </header>
@@ -40,8 +40,7 @@
         <div class="top-text">
             <h1>Conjugator</h1>
             <h2>No more torture in learning Spanish Conjugation</h2>
-            
-            <button><a href="#">Try it Now > > ></a></button>
+            <a href="https://conjugator-719.netlify.com/"><button>Try it Now > > ></button></a>
         </div>
     </div>
 </section>
@@ -72,7 +71,7 @@
 <section class="bottom-section">
     <div class="bottom-banner">
         <h2>Where else can you find such a good tool for learning <br>Spanish Conjugation?</h2>
-        <button><a href ="#">Try Conjugator Today</a></button>
+        <button><a href ="https://conjugator-719.netlify.com/">Try Conjugator Today</a></button>
     </div>
 </section>
 </div>
@@ -82,7 +81,7 @@
          <nav>
             <a href = "index.html">Home</a>
             <a href = "about.html">About Us</a>
-            <a href = "#">Sign In</a>
+            <a href = "https://conjugator-719.netlify.com/">Sign Up</a>
          </nav>
     </div>
 </footer>
