--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <nav>
             <a href = "index.html">Home</a>
             <a href = "about.html">About Us</a>
-            <a href = "#">Sign In</a>
+            <a href = "https://conjugator-719.netlify.com/">Sign Up</a>
         </nav>
     </header>
 
@@ -92,7 +92,7 @@
              <nav>
                 <a href = "index.html">Home</a>
                 <a href = "about.html">About Us</a>
-                <a href = "#">Sign In</a>
+                <a href = "https://conjugator-719.netlify.com/">Sign Up</a>
              </nav>
         </div>
     </footer>
